--- a/public/css/Animacion/estilos_animacion_cuy.css
+++ b/public/css/Animacion/estilos_animacion_cuy.css
@@ -249,7 +249,16 @@ a {
 .cuy_cargando{
 
 	width:100%;height:100%;position:absolute;z-index: 10;background: 
-	rgba(0, 0, 0, 0) url(/images/imgCuyCargando.jpg) no-repeat scroll center center / 100% 100%
+	/* rgba(0, 0, 0, 0) url(/images/imgCuyCargando.jpg) no-repeat scroll center center / 100% 100% */
+	/* Root-relative path for virtual host */
+	rgba(0, 0, 0, 0) url("/cuy_vista/images/imgCuyCargando.jpg") no-repeat scroll center center / 100% 100%
+
+	/* ;background: rgba(0, 0, 0, 0) url("../cuy_vista/images/imgCuyCargando.jpg") no-repeat scroll center center / 100% 100% */
+
+	/* background-image: url("../cuy_vista/images/imgCuyCargando.jpg"); */
+
+
+
 	;z-index:2000;background-repeat: no-repeat;background-position: center center;background.size:100% 100%
 }
 #DIV_GANADOR{
